--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html, body {
 body{
     display: grid;
     grid-template-columns: 4fr 1fr;
-    grid-template-rows: 1fr 3.5frvh 0.5fr ;
+    grid-template-rows: 1fr 3.5fr 0.5fr ;
     background-image: var(--bgrc);
     background-size: cover;
 }
@@ -32,29 +32,43 @@ body{
     grid-area: 2/1/2/1;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     align-items: center;
     gap: var(--gap-or-padding);
     overflow: auto;
 }
 
-form{
-    display: flex;
-    flex-direction: column;
-    width: 200px;
-   
+
+#form{
+    display: none;
+    grid-template-columns: 1fr 2fr;
+    gap: 10px;
+    
+    padding: var(--gap-or-padding);
+    color: black;
+    background-color: #D5FFE4;
+      
 }
+
 
 .books{
     display: grid;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: 2fr 2fr;
     gap: var(--gap-or-padding);
+    align-self: flex-start;
+    
     
 }
 .books >*{
     padding: var(--gap-or-padding);
+    background-color: white;
+    
 }
-button{
+.book > *{
+    color: black;
+}
+button, form > *{
     color: black;
 }
 .footer{
