--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 :root{
-    --gap-or-padding: 2rem;
-    --bgrc: linear-gradient(to bottom, #053B50, #D5FFE4);
-    --content-color: white;
+    --gap-or-padding: min(2%, 2rem);
+    --bgrc: #252B48;
+    --content-color: #D8D9DA;
+    --font-size-content: 1.2rem;
 }
 
 *{
@@ -18,16 +19,34 @@ body{
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: 1fr 3.5fr 0.5fr ;
-    background-image: var(--bgrc);
-    background-size: cover;
+    background-color: var(--bgrc);
+    
 }
 
 .header-container{
     grid-area: 1/1/1/span 2;
     display: flex;
     gap: var(--gap-or-padding);
+    
 }
 
+.header-container img{
+    width: 180px; ;    
+    height: 120px;
+}
+
+.header{
+    padding: max(1.5%,1rem) max(10%, 1.5rem);
+}
+
+.header h1{
+    font-size: 3rem;
+    
+}
+
+.header p{
+    font-size: var(--font-size-content);
+}
 .main-container{
     grid-area: 2/1/2/1;
     display: flex;
@@ -74,5 +93,6 @@ button, form > *{
 .footer{
     grid-area: 3/1/3/span 2;
     text-align: center;
-    color: black;
+    align-self: flex-end;
+    
 }
