--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --bgrc: #252B48;
     --content-color: #D8D9DA;
     --font-size-content: 1.2rem;
+    --font-size-title: 3rem;
 }
 
 *{
@@ -40,7 +41,7 @@ body{
 }
 
 .header h1{
-    font-size: 3rem;
+    font-size: var(--font-size-title);
     
 }
 
@@ -57,8 +58,20 @@ body{
     overflow: auto;
 }
 
+#add-button{
+    font-size: var(--font-size-title);
+    border: none;
+    color: white;
+    background-color: var(--bgrc);
+    border-radius: 5px;
+}
 
+#add-button:hover{
+    background-color: gray;
+    
+}
 #form{
+    margin-top: 2rem;
     display: none;
     grid-template-columns: 1fr 2fr;
     gap: 10px;
@@ -66,9 +79,20 @@ body{
     padding: var(--gap-or-padding);
     color: black;
     background-color: #D5FFE4;
+    border-radius: 8px;
       
 }
 
+#form button{
+    width: max-content;
+    padding: 2px 1rem;
+}
+
+#form > *{
+    border-radius: 3px;
+    color: blue;
+    font-size: var(--font-size-content)
+};
 
 .books{
     display: grid;
@@ -87,9 +111,7 @@ body{
 .book > *{
     color: black;
 }
-button, form > *{
-    color: black;
-}
+
 .footer{
     grid-area: 3/1/3/span 2;
     text-align: center;
