--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     background-color: var(--bgrc);
     justify-items: center;
 }
-
+/*------------------------------------header-container--------------------------------*/
 .header-container{
     grid-area: 1/1/1/span 2;
     display: flex;
@@ -48,6 +48,7 @@ body{
     font-size: var(--font-size-content);
 }
 
+/*-------------------------------main-container--------------------------*/
 .main-container{
     grid-area: 2/1/2/1;
     display: flex;
@@ -82,7 +83,7 @@ body{
     background-color: gray;
     
 }
-
+/*---------------------------------------------books-container-------------------------*/
 .books{
     display: grid;
     grid-template-columns: repeat(3, 2fr);
@@ -99,6 +100,7 @@ body{
     border-radius: 8px;
     box-shadow: 10px -8px 5px grey;
     margin: 1rem 1rem;   
+    
 } 
 
 .book .title{
@@ -107,7 +109,7 @@ body{
 }
 
 .book p{
-    width: 20ch;
+    max-width: 30ch;
 }
 
 .book > *{
@@ -125,7 +127,23 @@ body{
     border-top: 1px ridge gray;
 }
 
+.book{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: end;
+    
+}
 
+.book div{
+    flex: 1;
+    display: flex;
+    align-items: end;
+}
+.remove{
+    color: red;
+    margin-bottom: 0;
+}
 #form{
     margin-top: 3rem;
     display: none;
